crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_marker_in_code_span_multiline.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..16
  BLOCK_QUOTE@0..16
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    PARAGRAPH@2..16
      INLINE_CODE@2..15
        INLINE_CODE_MARKER@2..3 "`"
        INLINE_CODE_CONTENT@3..8 "code\n"
        LINE_PREFIX@8..9 ">"
        LINE_PREFIX@9..10 " "
        INLINE_CODE_CONTENT@10..14 "span"
        INLINE_CODE_MARKER@14..15 "`"
      NEWLINE@15..16 "\n"
