crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquotes.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..1749
  PARAGRAPH@0..60
    TEXT@0..59 "Markdown uses email c ..."
    NEWLINE@59..60 "\n"
  BLANK_LINE@60..61
    BLANK_LINE@60..61 "\n"
  BLOCK_QUOTE@61..178
    BLOCK_QUOTE_MARKER@61..62 ">"
    PARAGRAPH@62..116
      TEXT@62..89 "This is a block quote ..."
      NEWLINE@89..90 "\n"
      LINE_PREFIX@90..91 ">"
      TEXT@91..115 "paragraph has two lines."
      NEWLINE@115..116 "\n"
    BLOCK_QUOTE_MARKER@116..117 ">"
    BLANK_LINE@117..118
      BLANK_LINE@117..118 "\n"
    BLOCK_QUOTE_MARKER@118..119 ">"
    WHITESPACE@119..120 " "
    LIST@120..178
      LIST_ITEM@120..160
        LIST_MARKER@120..122 "1."
        WHITESPACE@122..123 " "
        PLAIN@123..160
          TEXT@123..159 "This is a list inside ..."
          NEWLINE@159..160 "\n"
      BLOCK_QUOTE_MARKER@160..161 ">"
      WHITESPACE@161..162 " "
      LIST_ITEM@162..178
        LIST_MARKER@162..164 "2."
        WHITESPACE@164..165 " "
        PLAIN@165..178
          TEXT@165..177 "Second item."
          NEWLINE@177..178 "\n"
  BLANK_LINE@178..179
    BLANK_LINE@178..179 "\n"
  PARAGRAPH@179..282
    TEXT@179..213 "A \"lazy\" form, which  ..."
    INLINE_CODE@213..216
      INLINE_CODE_MARKER@213..214 "`"
      INLINE_CODE_CONTENT@214..215 ">"
      INLINE_CODE_MARKER@215..216 "`"
    TEXT@216..257 " character only on th ..."
    NEWLINE@257..258 "\n"
    TEXT@258..281 "block, is also allowed:"
    NEWLINE@281..282 "\n"
  BLANK_LINE@282..283
    BLANK_LINE@282..283 "\n"
  BLOCK_QUOTE@283..338
    BLOCK_QUOTE_MARKER@283..284 ">"
    WHITESPACE@284..285 " "
    PARAGRAPH@285..338
      TEXT@285..312 "This is a block quote ..."
      NEWLINE@312..313 "\n"
      TEXT@313..337 "paragraph has two lines."
      NEWLINE@337..338 "\n"
  BLANK_LINE@338..339
    BLANK_LINE@338..339 "\n"
  BLOCK_QUOTE@339..397
    BLOCK_QUOTE_MARKER@339..340 ">"
    WHITESPACE@340..341 " "
    LIST@341..397
      LIST_ITEM@341..381
        LIST_MARKER@341..343 "1."
        WHITESPACE@343..344 " "
        PLAIN@344..381
          TEXT@344..380 "This is a list inside ..."
          NEWLINE@380..381 "\n"
      LIST_ITEM@381..397
        LIST_MARKER@381..383 "2."
        WHITESPACE@383..384 " "
        PLAIN@384..397
          TEXT@384..396 "Second item."
          NEWLINE@396..397 "\n"
  BLANK_LINE@397..398
    BLANK_LINE@397..398 "\n"
  PARAGRAPH@398..523
    TEXT@398..477 "Among the block eleme ..."
    NEWLINE@477..478 "\n"
    TEXT@478..522 "quotes. That is, bloc ..."
    NEWLINE@522..523 "\n"
  BLANK_LINE@523..524
    BLANK_LINE@523..524 "\n"
  BLOCK_QUOTE@524..591
    BLOCK_QUOTE_MARKER@524..525 ">"
    WHITESPACE@525..526 " "
    PARAGRAPH@526..549
      TEXT@526..548 "This is a block quote."
      NEWLINE@548..549 "\n"
    BLOCK_QUOTE_MARKER@549..550 ">"
    BLANK_LINE@550..551
      BLANK_LINE@550..551 "\n"
    BLOCK_QUOTE_MARKER@551..552 ">"
    WHITESPACE@552..553 " "
    BLOCK_QUOTE@553..591
      BLOCK_QUOTE_MARKER@553..554 ">"
      WHITESPACE@554..555 " "
      PARAGRAPH@555..591
        TEXT@555..590 "A block quote within  ..."
        NEWLINE@590..591 "\n"
  BLANK_LINE@591..592
    BLANK_LINE@591..592 "\n"
  PARAGRAPH@592..848
    TEXT@592..599 "If the "
    INLINE_CODE@599..602
      INLINE_CODE_MARKER@599..600 "`"
      INLINE_CODE_CONTENT@600..601 ">"
      INLINE_CODE_MARKER@601..602 "`"
    TEXT@602..665 " character is followe ..."
    NEWLINE@665..666 "\n"
    TEXT@666..742 "considered part of th ..."
    NEWLINE@742..743 "\n"
    TEXT@743..820 "the contents.  Thus,  ..."
    NEWLINE@820..821 "\n"
    TEXT@821..843 "five spaces after the "
    INLINE_CODE@843..846
      INLINE_CODE_MARKER@843..844 "`"
      INLINE_CODE_CONTENT@844..845 ">"
      INLINE_CODE_MARKER@845..846 "`"
    TEXT@846..847 ":"
    NEWLINE@847..848 "\n"
  BLANK_LINE@848..849
    BLANK_LINE@848..849 "\n"
  BLOCK_QUOTE@849..860
    BLOCK_QUOTE_MARKER@849..850 ">"
    WHITESPACE@850..851 " "
    CODE_BLOCK@851..860
      CODE_CONTENT@851..860
        WHITESPACE@851..855 "    "
        TEXT@855..859 "code"
        NEWLINE@859..860 "\n"
  BLANK_LINE@860..861
    BLANK_LINE@860..861 "\n"
  HEADING@861..902
    ATX_HEADING_MARKER@861..864
      ATX_HEADING_MARKER@861..864 "###"
    WHITESPACE@864..865 " "
    HEADING_CONTENT@865..901
      TEXT@865..876 "Extension: "
      INLINE_CODE@876..901
        INLINE_CODE_MARKER@876..877 "`"
        INLINE_CODE_CONTENT@877..900 "blank_before_blockquote"
        INLINE_CODE_MARKER@900..901 "`"
    NEWLINE@901..902 "\n"
  BLANK_LINE@902..903
    BLANK_LINE@902..903 "\n"
  PARAGRAPH@903..1322
    TEXT@903..979 "Original Markdown syn ..."
    NEWLINE@979..980 "\n"
    TEXT@980..1059 "Pandoc does require t ..."
    NEWLINE@1059..1060 "\n"
    TEXT@1060..1124 "The reason for the re ..."
    INLINE_CODE@1124..1127
      INLINE_CODE_MARKER@1124..1125 "`"
      INLINE_CODE_CONTENT@1125..1126 ">"
      INLINE_CODE_MARKER@1126..1127 "`"
    TEXT@1127..1137 " to end up"
    NEWLINE@1137..1138 "\n"
    TEXT@1138..1213 "at the beginning of a ..."
    NEWLINE@1213..1214 "\n"
    TEXT@1214..1225 "unless the "
    INLINE_CODE@1225..1242
      INLINE_CODE_MARKER@1225..1226 "`"
      INLINE_CODE_CONTENT@1226..1241 "markdown_strict"
      INLINE_CODE_MARKER@1241..1242 "`"
    TEXT@1242..1291 " format is used, the  ..."
    NEWLINE@1291..1292 "\n"
    TEXT@1292..1321 "nested block quote in ..."
    NEWLINE@1321..1322 "\n"
  BLANK_LINE@1322..1323
    BLANK_LINE@1322..1323 "\n"
  BLOCK_QUOTE@1323..1417
    BLOCK_QUOTE_MARKER@1323..1324 ">"
    WHITESPACE@1324..1325 " "
    PARAGRAPH@1325..1417
      TEXT@1325..1347 "This is a block quote."
      NEWLINE@1347..1348 "\n"
      LINE_PREFIX@1348..1349 ">"
      TEXT@1349..1369 "> Not nested, since "
      INLINE_CODE@1369..1394
        INLINE_CODE_MARKER@1369..1370 "`"
        INLINE_CODE_CONTENT@1370..1393 "blank_before_blockquote"
        INLINE_CODE_MARKER@1393..1394 "`"
      TEXT@1394..1416 " is enabled by default"
      NEWLINE@1416..1417 "\n"
  BLANK_LINE@1417..1418
    BLANK_LINE@1417..1418 "\n"
  BLOCK_QUOTE@1418..1749
    BLOCK_QUOTE_MARKER@1418..1419 ">"
    WHITESPACE@1419..1420 " "
    PARAGRAPH@1420..1441
      TEXT@1420..1440 "practical skills in:"
      NEWLINE@1440..1441 "\n"
    BLOCK_QUOTE_MARKER@1441..1442 ">"
    BLANK_LINE@1442..1443
      BLANK_LINE@1442..1443 "\n"
    BLOCK_QUOTE_MARKER@1443..1444 ">"
    WHITESPACE@1444..1445 " "
    LIST@1445..1749
      LIST_ITEM@1445..1563
        LIST_MARKER@1445..1446 "-"
        WHITESPACE@1446..1447 " "
        PLAIN@1447..1563
          TEXT@1447..1515 "Developing and integr ..."
          NEWLINE@1515..1516 "\n"
          LINE_PREFIX@1516..1517 ">"
          LINE_PREFIX@1517..1518 " "
          TEXT@1518..1562 "  while reducing repe ..."
          NEWLINE@1562..1563 "\n"
      BLOCK_QUOTE_MARKER@1563..1564 ">"
      WHITESPACE@1564..1565 " "
      LIST_ITEM@1565..1669
        LIST_MARKER@1565..1566 "-"
        WHITESPACE@1566..1567 " "
        PLAIN@1567..1669
          TEXT@1567..1635 "Substituting Quarto’ ..."
          NEWLINE@1635..1636 "\n"
          LINE_PREFIX@1636..1637 ">"
          LINE_PREFIX@1637..1638 " "
          TEXT@1638..1668 "  beyond the built-in ..."
          NEWLINE@1668..1669 "\n"
      BLOCK_QUOTE_MARKER@1669..1670 ">"
      WHITESPACE@1670..1671 " "
      LIST_ITEM@1671..1749
        LIST_MARKER@1671..1672 "-"
        WHITESPACE@1672..1673 " "
        PLAIN@1673..1749
          TEXT@1673..1728 "Implementing filters  ..."
          NEWLINE@1728..1729 "\n"
          LINE_PREFIX@1729..1730 ">"
          LINE_PREFIX@1730..1731 " "
          TEXT@1731..1748 "  transformation."
          NEWLINE@1748..1749 "\n"
