crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_bookdown.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..610
  PARAGRAPH@0..139
    TEXT@0..9 "(ref:fig)"
    TEXT@9..138 " A very very very ver ..."
    NEWLINE@138..139 "\n"
  BLANK_LINE@139..140
    BLANK_LINE@139..140 "\n"
  PARAGRAPH@140..325
    TEXT@140..169 "An equation with a re ..."
    NEWLINE@169..170 "\n"
    LATEX_COMMAND@170..275
      TEXT@170..275 "\\begin{equation}\n  f\\ ..."
    TEXT@275..276 " "
    NEWLINE@276..277 "\n"
    TEXT@277..308 "We can refer to it as ..."
    CROSSREF@308..323
      CROSSREF_BOOKDOWN_OPEN@308..314 "\\@ref("
      CROSSREF_KEY@314..322 "eq:binom"
      CROSSREF_BOOKDOWN_CLOSE@322..323 ")"
    TEXT@323..324 "."
    NEWLINE@324..325 "\n"
  BLANK_LINE@325..326
    BLANK_LINE@325..326 "\n"
  PARAGRAPH@326..359
    TEXT@326..358 "Here's a table with a ..."
    NEWLINE@358..359 "\n"
  BLANK_LINE@359..360
    BLANK_LINE@359..360 "\n"
  PIPE_TABLE@360..470
    TABLE_CAPTION@360..409
      TABLE_CAPTION_PREFIX@360..367 "Table: "
      TEXT@367..382 "(\\#tab:mytable)"
      TEXT@382..408 " A table with a refer ..."
      NEWLINE@408..409 "\n"
    BLANK_LINE@409..410
      BLANK_LINE@409..410 "\n"
    TABLE_HEADER@410..430
      TEXT@410..411 "|"
      WHITESPACE@411..412 " "
      TABLE_CELL@412..413
        TEXT@412..413 "A"
      WHITESPACE@413..416 "   "
      TEXT@416..417 "|"
      WHITESPACE@417..418 " "
      TABLE_CELL@418..419
        TEXT@418..419 "B"
      WHITESPACE@419..422 "   "
      TEXT@422..423 "|"
      WHITESPACE@423..424 " "
      TABLE_CELL@424..425
        TEXT@424..425 "C"
      WHITESPACE@425..428 "   "
      TEXT@428..429 "|"
      NEWLINE@429..430 "\n"
    TABLE_SEPARATOR@430..450
      TABLE_SEP_DELIM@430..431 "|"
      TABLE_SEP_WHITESPACE@431..432 " "
      TABLE_SEP_DASHES@432..435 "---"
      TABLE_SEP_WHITESPACE@435..436 " "
      TABLE_SEP_DELIM@436..437 "|"
      TABLE_SEP_WHITESPACE@437..438 " "
      TABLE_SEP_DASHES@438..441 "---"
      TABLE_SEP_WHITESPACE@441..442 " "
      TABLE_SEP_DELIM@442..443 "|"
      TABLE_SEP_WHITESPACE@443..444 " "
      TABLE_SEP_DASHES@444..447 "---"
      TABLE_SEP_WHITESPACE@447..448 " "
      TABLE_SEP_DELIM@448..449 "|"
      NEWLINE@449..450 "\n"
    TABLE_ROW@450..470
      TEXT@450..451 "|"
      WHITESPACE@451..452 " "
      TABLE_CELL@452..453
        TEXT@452..453 "1"
      WHITESPACE@453..456 "   "
      TEXT@456..457 "|"
      WHITESPACE@457..458 " "
      TABLE_CELL@458..459
        TEXT@458..459 "2"
      WHITESPACE@459..462 "   "
      TEXT@462..463 "|"
      WHITESPACE@463..464 " "
      TABLE_CELL@464..465
        TEXT@464..465 "3"
      WHITESPACE@465..468 "   "
      TEXT@468..469 "|"
      NEWLINE@469..470 "\n"
  BLANK_LINE@470..471
    BLANK_LINE@470..471 "\n"
  PARAGRAPH@471..535
    TEXT@471..495 "We refer to is as Table "
    CROSSREF@495..513
      CROSSREF_BOOKDOWN_OPEN@495..501 "\\@ref("
      CROSSREF_KEY@501..512 "tab:mytable"
      CROSSREF_BOOKDOWN_CLOSE@512..513 ")"
    TEXT@513..519 ", not "
    CROSSREF@519..533
      CROSSREF_BOOKDOWN_OPEN@519..525 "\\@ref("
      CROSSREF_KEY@525..532 "mytable"
      CROSSREF_BOOKDOWN_CLOSE@532..533 ")"
    TEXT@533..534 "!"
    NEWLINE@534..535 "\n"
  BLANK_LINE@535..536
    BLANK_LINE@535..536 "\n"
  HEADING@536..555
    ATX_HEADING_MARKER@536..538
      ATX_HEADING_MARKER@536..538 "##"
    WHITESPACE@538..539 " "
    HEADING_CONTENT@539..554
      TEXT@539..554 "Implicit Header"
    NEWLINE@554..555 "\n"
  BLANK_LINE@555..556
    BLANK_LINE@555..556 "\n"
  PARAGRAPH@556..610
    TEXT@556..586 "We can refer to it as ..."
    CROSSREF@586..608
      CROSSREF_BOOKDOWN_OPEN@586..592 "\\@ref("
      CROSSREF_KEY@592..607 "implicit-header"
      CROSSREF_BOOKDOWN_CLOSE@607..608 ")"
    TEXT@608..609 "."
    NEWLINE@609..610 "\n"
