crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_bracket_display_math_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..74
  PARAGRAPH@0..7
    TEXT@0..6 "Before"
    NEWLINE@6..7 "\n"
  BLANK_LINE@7..8
    BLANK_LINE@7..8 "\n"
  PARAGRAPH@8..50
    ESCAPED_CHAR@8..10 "\\["
    NEWLINE@10..11 "\n"
    TEXT@11..27 "\\begin{bmatrix}1"
    ESCAPED_CHAR@27..29 "\\\\"
    TEXT@29..30 "1"
    ESCAPED_CHAR@30..32 "\\\\"
    TEXT@32..46 "0\\end{bmatrix}"
    NEWLINE@46..47 "\n"
    ESCAPED_CHAR@47..49 "\\]"
    NEWLINE@49..50 "\n"
  BLANK_LINE@50..51
    BLANK_LINE@50..51 "\n"
  PARAGRAPH@51..57
    TEXT@51..56 "After"
    NEWLINE@56..57 "\n"
  BLANK_LINE@57..58
    BLANK_LINE@57..58 "\n"
  HEADING@58..68
    ATX_HEADING_MARKER@58..59
      ATX_HEADING_MARKER@58..59 "#"
    WHITESPACE@59..60 " "
    HEADING_CONTENT@60..67
      TEXT@60..67 "Heading"
    NEWLINE@67..68 "\n"
  BLANK_LINE@68..69
    BLANK_LINE@68..69 "\n"
  PARAGRAPH@69..74
    TEXT@69..73 "Text"
    NEWLINE@73..74 "\n"
